# routes/admin/users.php
@@ -1,0 +1,10 @@
+<?php
+
+use App\Http\Controllers\UserController;
+use Illuminate\Support\Facades\Route;
+
+Route::get('/user/lists', [UserController::class, 'lists']);
+Route::post('/user/create', [UserController::class, 'create']);
+Route::post('/user/update', [UserController::class, 'update']);
+Route::post('/user/delete', [UserController::class, 'delete']);
+
